A bit of tidy up. Now the fancy pointer tests are integrated into the "normal" test suit and can be compiled with C++-11.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -7,32 +7,24 @@ add_executable(tsl_sparse_map_tests "main.cpp"
         "policy_tests.cpp"
         "popcount_tests.cpp"
         "sparse_map_tests.cpp"
-        "sparse_set_tests.cpp")
-
-add_executable(tsl_fancy_pointer_tests "fancy_pointer/main.cpp"
+        "sparse_set_tests.cpp"
         "fancy_pointer/sparse_array_tests.cpp"
         "fancy_pointer/sparse_hash_set_tests.cpp"
         "fancy_pointer/CustomAllocator.h"
         "fancy_pointer/sparse_hash_map_tests.cpp")
 
-
 target_compile_features(tsl_sparse_map_tests PRIVATE cxx_std_11)
-target_compile_features(tsl_fancy_pointer_tests PRIVATE cxx_std_11)
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
     target_compile_options(tsl_sparse_map_tests PRIVATE -Werror -Wall -Wextra -Wold-style-cast -DTSL_DEBUG -UNDEBUG)
-    target_compile_options(tsl_fancy_pointer_tests PRIVATE -Werror -Wall -Wextra -Wold-style-cast -DTSL_DEBUG -UNDEBUG)
 elseif(CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
     target_compile_options(tsl_sparse_map_tests PRIVATE /bigobj /WX /W3 /DTSL_DEBUG /UNDEBUG)
-    target_compile_options(tsl_fancy_pointer_tests PRIVATE /bigobj /WX /W3 /DTSL_DEBUG /UNDEBUG)
 endif()
 
 # Boost::unit_test_framework
 find_package(Boost 1.54.0 REQUIRED COMPONENTS unit_test_framework)
 target_link_libraries(tsl_sparse_map_tests PRIVATE Boost::unit_test_framework)
-target_link_libraries(tsl_fancy_pointer_tests PRIVATE Boost::unit_test_framework)
 
 # tsl::sparse_map
 add_subdirectory(../ ${CMAKE_CURRENT_BINARY_DIR}/tsl)
 target_link_libraries(tsl_sparse_map_tests PRIVATE tsl::sparse_map)
-target_link_libraries(tsl_fancy_pointer_tests PRIVATE tsl::sparse_map)
