Added the "const_cast" for boost offset pointers in its own header.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -11,7 +11,8 @@ add_executable(tsl_sparse_map_tests "main.cpp"
         "fancy_pointer/sparse_array_tests.cpp"
         "fancy_pointer/sparse_hash_set_tests.cpp"
         "fancy_pointer/CustomAllocator.h"
-        "fancy_pointer/sparse_hash_map_tests.cpp")
+        "fancy_pointer/sparse_hash_map_tests.cpp"
+        "../include/tsl/boost_offset_pointer.h")
 
 target_compile_features(tsl_sparse_map_tests PRIVATE cxx_std_11)
 
