--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,18 +3,11 @@ cmake_minimum_required(VERSION 3.8)
 project(tsl_sparse_map_tests)
 
 add_executable(tsl_sparse_map_tests "main.cpp"
-        "custom_allocator_tests.cpp"
-        "policy_tests.cpp"
-        "popcount_tests.cpp"
-        "sparse_map_tests.cpp"
-        "sparse_set_tests.cpp"
-        "fancy_pointer/sparse_array_tests.cpp"
-        "fancy_pointer/sparse_hash_set_tests.cpp"
-        "fancy_pointer/CustomAllocator.h"
-        "fancy_pointer/sparse_hash_map_tests.cpp"
-        "../include/tsl/boost_offset_pointer.h"
-        "scoped_allocator_adaptor/sparse_array_tests.cpp"
-        "scoped_allocator_adaptor/sparse_hash_set_tests.cpp")
+                                    "custom_allocator_tests.cpp"
+                                    "policy_tests.cpp"
+                                    "popcount_tests.cpp"
+                                    "sparse_map_tests.cpp"
+                                    "sparse_set_tests.cpp")
 
 target_compile_features(tsl_sparse_map_tests PRIVATE cxx_std_11)
 
