--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,14 +2,16 @@ cmake_minimum_required(VERSION 3.8)
 
 project(tsl_sparse_map_tests)
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_EXTENSIONS OFF)
+
 add_executable(tsl_sparse_map_tests "main.cpp"
                                     "custom_allocator_tests.cpp"
                                     "policy_tests.cpp"
                                     "popcount_tests.cpp"
                                     "sparse_map_tests.cpp"
                                     "sparse_set_tests.cpp")
-
-target_compile_features(tsl_sparse_map_tests PRIVATE cxx_std_11)
 
 if(CMAKE_CXX_COMPILER_ID MATCHES "Clang" OR CMAKE_CXX_COMPILER_ID MATCHES "GNU")
     target_compile_options(tsl_sparse_map_tests PRIVATE -Werror -Wall -Wextra -Wold-style-cast -DTSL_DEBUG -UNDEBUG)
