--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,23 @@
-cmake_minimum_required(VERSION 3.1)
+cmake_minimum_required(VERSION 3.18)
+project(dice-sparse-map
+        VERSION 0.1.0
+        DESCRIPTION "C++ implementation of a memory efficient hash map and hash set based on [tsl::sparse_map](https://github.com/Tessil/sparse-map). We added support for fancy pointers.")
 
-project(tsl-sparse-map VERSION 0.6.2 LANGUAGES CXX)
-include(GNUInstallDirs)
+include(cmake/boilerplate_init.cmake)
+boilerplate_init()
 
-add_library(sparse_map INTERFACE)
+find_package(Boost REQUIRED COMPONENTS headers)
+
+add_library(dice-sparse-map INTERFACE)
 # Use tsl::sparse_map as target, more consistent with other libraries conventions (Boost, Qt, ...)
-add_library(tsl::sparse_map ALIAS sparse_map)
+add_library(Dice::sparse-map ALIAS dice-sparse-map)
 
-target_include_directories(sparse_map INTERFACE
-                           "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-                           "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>")
+target_include_directories(
+        dice-sparse-map INTERFACE "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>")
 
-list(APPEND headers "${CMAKE_CURRENT_SOURCE_DIR}/include/tsl/sparse_growth_policy.h"
-                    "${CMAKE_CURRENT_SOURCE_DIR}/include/tsl/sparse_hash.h"
-                    "${CMAKE_CURRENT_SOURCE_DIR}/include/tsl/sparse_map.h"
-                    "${CMAKE_CURRENT_SOURCE_DIR}/include/tsl/sparse_set.h")
-target_sources(sparse_map INTERFACE "$<BUILD_INTERFACE:${headers}>")
+target_link_libraries(dice-sparse-map INTERFACE
+        Boost::headers
+        )
 
 if(MSVC)
     target_sources(sparse_map INTERFACE
@@ -23,55 +25,9 @@ if(MSVC)
                    "$<INSTALL_INTERFACE:${CMAKE_INSTALL_DATAROOTDIR}/tsl-sparse-map.natvis>")
 endif()
 
+if (IS_TOP_LEVEL)
+    include(cmake/install_interface_library.cmake)
+    install_interface_library(dice-sparse-map include)
+endif ()
 
 
-
-# Installation (only compatible with CMake version >= 3.3)
-if(${CMAKE_VERSION} VERSION_GREATER "3.2")
-    include(CMakePackageConfigHelpers)
-
-    ## Install include directory and potential natvis file
-    install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/tsl"
-            DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
-
-    if(MSVC)
-        install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/tsl-sparse-map.natvis"
-                DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}")
-    endif()
-
-
-
-    ## Create and install tsl-sparse-mapConfig.cmake
-    configure_package_config_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake/tsl-sparse-mapConfig.cmake.in"
-                                  "${CMAKE_CURRENT_BINARY_DIR}/tsl-sparse-mapConfig.cmake"
-                                  INSTALL_DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/cmake/tsl-sparse-map")
-
-    install(FILES "${CMAKE_CURRENT_BINARY_DIR}/tsl-sparse-mapConfig.cmake"
-            DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/cmake/tsl-sparse-map")
-
-
-
-    ## Create and install tsl-sparse-mapTargets.cmake
-    install(TARGETS sparse_map
-            EXPORT tsl-sparse-mapTargets)
-
-    install(EXPORT tsl-sparse-mapTargets
-            NAMESPACE tsl::
-            DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/cmake/tsl-sparse-map")
-
-
-
-    ## Create and install tsl-sparse-mapConfigVersion.cmake
-    # tsl-sparse-map is header-only and does not depend on the architecture.
-    # Remove CMAKE_SIZEOF_VOID_P from tsl-sparse-mapConfigVersion.cmake so that a
-    # tsl-sparse-mapConfig.cmake generated for a 64 bit target can be used for 32 bit
-    # targets and vice versa.
-    set(CMAKE_SIZEOF_VOID_P_BACKUP ${CMAKE_SIZEOF_VOID_P})
-    unset(CMAKE_SIZEOF_VOID_P)
-    write_basic_package_version_file("${CMAKE_CURRENT_BINARY_DIR}/tsl-sparse-mapConfigVersion.cmake"
-                                     COMPATIBILITY SameMajorVersion)
-    set(CMAKE_SIZEOF_VOID_P ${CMAKE_SIZEOF_VOID_P_BACKUP})
-
-    install(FILES "${CMAKE_CURRENT_BINARY_DIR}/tsl-sparse-mapConfigVersion.cmake"
-            DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/cmake/tsl-sparse-map")
-endif()
