re-enabled custom allocator tests, fixed some naming issues

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,11 +3,17 @@ cmake_minimum_required(VERSION 3.18)
 project(tsl_sparse_map_tests)
 
 add_executable(tsl_sparse_map_tests "main.cpp"
-                                    "custom_allocator_tests.cpp"
-                                    "policy_tests.cpp"
-                                    "popcount_tests.cpp"
-                                    "sparse_map_tests.cpp"
-                                    "sparse_set_tests.cpp")
+        "custom_allocator_tests.cpp"
+        "policy_tests.cpp"
+        "popcount_tests.cpp"
+        "sparse_map_tests.cpp"
+        "sparse_set_tests.cpp"
+        "fancy_pointer/sparse_array_tests.cpp"
+        "fancy_pointer/sparse_hash_map_tests.cpp"
+        "fancy_pointer/sparse_hash_set_tests.cpp"
+        "scoped_allocator_adaptor/sparse_array_tests.cpp"
+        "scoped_allocator_adaptor/sparse_hash_set_tests.cpp"
+        )
 
 target_compile_features(tsl_sparse_map_tests PRIVATE cxx_std_20)
 
@@ -23,5 +29,5 @@ find_package(Boost 1.54.0 REQUIRED COMPONENTS unit_test_framework)
 target_link_libraries(tsl_sparse_map_tests PRIVATE Boost::unit_test_framework)
 
 # Dice::sparse_map
-add_subdirectory(../ ${CMAKE_CURRENT_BINARY_DIR}/tsl)
+add_subdirectory(../ ${CMAKE_CURRENT_BINARY_DIR}/Dice/sparse-map)
 target_link_libraries(tsl_sparse_map_tests PRIVATE Dice::sparse-map)
